# mailmerge-rust-crate

./: Cargo.toml  README.md  cspell.json
src/: main.rs
src/app/: args.rs  clap.rs  confy.rs  mod.rs  run.rs
